@@ -32,6 +32,7 @@ Changes:
                                                                                
 	* lcp_solver : Modification of the convergence criteria
 	* lcp_solver : Renaming lcp_nlgs into lcp_pgs
+	* lcp_solver : Renaming lcp_sor into lcp_psor
 	
 --------------------------------------------------------------------------------
   v2.0.1 - 14 Decembre 2006 (release 626)
